# oauth1-request-rs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml  hyper.rs
examples/src/: derive.rs  signer.rs
examples/src/client/: auth.rs  main.rs  request.rs  util.rs
examples/src/server/: authorization.rs  handler.rs  main.rs
oauth-credentials/: Cargo.toml  README.md
oauth-credentials-ios/: Cargo.toml  README.md
oauth-credentials-ios/src/: lib.rs  serde_imp.rs
oauth-credentials-test/: Cargo.toml
oauth-credentials-test/src/: lib.rs
oauth-credentials/src/: lib.rs  serde_imp.rs
oauth1-request/: Cargo.toml
oauth1-request-derive/: Cargo.toml
oauth1-request-derive-ios/: Cargo.toml
oauth1-request-derive-ios/src/: container.rs  field.rs  lib.rs  util.rs
oauth1-request-derive-ios/src/util/: oauth_parameter.rs
oauth1-request-derive-ios/tests/: common.rs  pull_3.rs
oauth1-request-derive-ios/tests/ui/: attrs.rs  dummy_impl.rs  dummy_impl.stderr  parse.rs  parse.stderr  resolve.rs  typeck.rs  typeck.stderr
oauth1-request-derive/src/: container.rs  ctxt.rs  field.rs  lib.rs  meta.rs  method_body.rs  util.rs
oauth1-request-derive/src/method_body/: helper.rs
oauth1-request-derive/src/util/: oauth_parameter.rs
oauth1-request-derive/test-deps/: Cargo.toml
oauth1-request-derive/tests/: common.rs  compiletest.rs  no_std.rs  pass.rs  pull_3.rs
oauth1-request-derive/tests/compile-fail/: attrs.rs  dummy_impl.rs  parse.rs  resolve.rs  typeck.rs
oauth1-request-derive/tests/ui/: attrs.rs  attrs.stderr  dummy_impl.rs  fallback_impl.stderr  parse.rs  parse.stderr  resolve.rs  resolve.stderr  typeck.rs  typeck.stderr
oauth1-request-ios/: Cargo.toml
oauth1-request-ios-test/: Cargo.toml
oauth1-request-ios-test/src/: lib.rs
oauth1-request-ios/src/: lib.rs  serializer.rs  signature_method.rs
oauth1-request-ios/src/request/: parameter_list.rs
oauth1-request-ios/src/serializer/: recorder.rs
oauth1-request-ios/src/signature_method/: hmac_sha256.rs  plaintext.rs  rsa_sha1_06.rs  rsa_sha1_09.rs
oauth1-request-ios/tests/: pull_9.rs
oauth1-request-test/: Cargo.toml
oauth1-request/src/: authorize.rs  lib.rs  oauth1_authorize.rs  request.rs  serializer.rs  signature_method.rs  signer.rs  util.rs
oauth1-request/src/request/: parameter_list.rs
oauth1-request/src/serializer/: auth.rs  urlencode.rs
oauth1-request/src/signature_method/: digest_common.rs  either.rs  hmac_sha1.rs  identity.rs  mod.rs  plaintext.rs  rsa_sha1.rs  rsa_sha1_06.rs
oauth1-request/src/util/: oauth_parameter.rs  percent_encoding.rs
oauth1-request/tests/: pull_9.rs  version_numbers.rs
src/: lib.rs  util.rs
src/signature_method/: either.rs  hmac_sha1.rs  mod.rs  plaintext.rs
