[workspace]
members = [
    "oauth-credentials-ios",
    "oauth1-request",
    "oauth1-request-derive-ios",
]

[patch.crates-io]
oauth-credentials-ios = { path = "oauth-credentials-ios" }
oauth1-request = { path = "oauth1-request" }
oauth1-request-derive-ios = { path = "oauth1-request-derive-ios" }
