[workspace]
members = [
    "oauth-credentials-ios",
    "oauth1-request-ios",
    "oauth1-request-derive-ios",
]

[patch.crates-io]
oauth-credentials-ios = { path = "oauth-credentials-ios" }
oauth1-request-ios = { path = "oauth1-request-ios" }
oauth1-request-derive-ios = { path = "oauth1-request-derive-ios" }
