[package]
name = "examples"
edition = "2018"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
publish = false

[[bin]]
name = "derive"
path = "src/derive.rs"

[[bin]]
name = "signer"
path = "src/signer.rs"

[dependencies]
futures = { version = "=0.3" }
http = "0.2"
hyper = { version = "0.13", features = ["stream"] }
oauth = { version = "0.3", package = "oauth1-request" }
tokio = { version = "0.2", features = ["macros"] }
tower-service = "0.3"
