[package]
name = "examples"
edition = "2018"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
publish = false

[workspace]
# Exclude the examples from the workspace because it uses features from newest Rust toolchains
# and breaks the CI on older toolchains.

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1"
atoi = "0.3"
base64 = "0.13"
bytes = "0.5"
env_logger = "0.8"
form_urlencoded = "1"
futures = "0.3"
headers = "0.3"
hmac = "0.10"
http = "0.2"
http-body = "0.3"
hyper = { version = "0.13", features = ["stream"] }
log = "0.4"
nom = "=6.0.0-beta1"
oauth = { version = "0.4", package = "oauth1-request" }
oauth-credentials = { version = "0.1", features = ["serde"] }
percent-encoding = "2"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sha-1 = "0.9"
tokio = { version = "0.2", features = ["macros"] }
tower-service = "0.3"
