[package]
name = "examples"
edition = "2018"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
publish = false

[workspace]
# Exclude the examples from the workspace because it uses features from newest Rust toolchains
# and breaks the CI on older toolchains.

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1"
atoi = "0.4"
base64 = "0.13"
bytes = "1"
env_logger = "0.8"
form_urlencoded = "1"
futures = "0.3"
hmac = "0.11"
http = "0.2.5"
http-body = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "runtime", "server", "stream"] }
log = "0.4"
nom = "6"
oauth = { version = "0.6", package = "oauth1-request" }
oauth-credentials = { version = "0.3", features = ["serde"] }
percent-encoding = "2"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sha-1 = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-service = "0.3"

[patch.crates-io]
oauth-credentials = { path = "../oauth-credentials" }
oauth1-request = { path = "../oauth1-request" }
oauth1-request-derive = { path = "../oauth1-request-derive" }
