[package]
name = "oauth-credentials-test"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
description = "A hack to make the CI work with older toolchains."
publish = false

[dependencies]
oauth-credentials = { path = "../oauth-credentials", default-features = false }

[features]
default = ["std"]

alloc = ["oauth-credentials/alloc"]
std = ["oauth-credentials/std"]
