[package]
name = "oauth-credentials-ios-test"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
description = "A hack to make the CI work with older toolchains."
publish = false

[dependencies]
oauth-credentials-ios = { path = "../oauth-credentials-ios", default-features = false }

[features]
default = ["std"]

alloc = ["oauth-credentials-ios/alloc"]
std = ["oauth-credentials-ios/std"]
