[package]
name = "oauth-credentials"
version = "0.2.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["oauth", "oauth1"]
categories = ["authentication"]
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth-credentials/0.2.0/oauth_credentials/"
description = """
Types for representing the credential pairs of OAuth 1.0.
"""

[package.metadata.docs.rs]
rustdoc-args = ["--edition", "2018"]

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"

[features]
default = ["std"]

alloc = []
std = ["alloc"]
