[package]
name = "oauth1-request-derive"
edition = "2018"
version = "0.3.1"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tesaguri/oauth1-request-rs"
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth1-request-derive/0.3.1/oauth1_request_derive/"
description = """
A derive macro for `oauth1_request::Authorize` trait.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "0.1"
quote = "1"
syn = "1"

[dev-dependencies]
compiletest = { version = "0.3", features = ["stable"], package = "compiletest_rs" }
oauth = { version = "0.3.0", package = "oauth1-request" }
version-sync = "0.8"
