[package]
name = "oauth1-request-derive"
edition = "2018"
version = "0.4.1"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tesaguri/oauth1-request-rs"
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth1-request-derive/0.4.1/oauth1_request_derive/"
description = """
A derive macro for `oauth1_request::Request` trait.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "0.1.2"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
compiletest_rs = "0.5"
oauth1-request = "0.5"
version-sync = "0.9"
