[package]
name = "oauth1-request-derive"
edition = "2018"
version = "0.5.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tesaguri/oauth1-request-rs"
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth1-request-derive/0.5.0/oauth1_request_derive/"
description = """
A derive macro for `oauth1_request::Request` trait.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
oauth1-request = { version = "0.6", default-features = false, features = ["alloc", "derive", "test"] }
trybuild = "1"
version-sync = "0.9"
