[workspace]

[package]
name = "oauth1-request-test-ios"
version = "0.0.0"
edition = "2018"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
description = "A hack to make the CI work with older toolchains."
publish = false

[dependencies]
oauth1-request = { path = "../oauth1-request", default-features = false }

[features]
default = ["std"]
alloc = ["oauth1-request/alloc"]
# derive = ["oauth1-request/derive"]
# hmac-sha1 = ["oauth1-request/hmac-sha1"]
rsa-sha1-06 = ["oauth1-request/rsa-sha1-06"]
js = ["oauth1-request/js"]
serde = ["oauth1-request/serde"]
std = ["oauth1-request/std"]
test = ["oauth1-request/test"]
