[package]
name = "oauth1-request-ios"
version = "0.0.1"
edition = "2018"
rust-version = "1.46.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["oauth", "oauth1"]
categories = ["authentication"]
homepage = "https://github.com/samgj18/oauth1-ios-rs"
repository = "https://github.com/samgj18/oauth1-ios-rs"
documentation = "https://docs.rs/oauth1-request-ios/0.0.1/oauth1_request_ios/"
description = """
OAuth 1.0 client library for Rust with HMAC-SHA256 support.
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "pull_9"
required-features = ["std"]

[dependencies]
base64 = { version = "0.22", default-features = false }
cfg-if = "1"
fmt-cmp = "0.1.1"
oauth-credentials-ios = { path = "../oauth-credentials-ios", default-features = false }
percent-encoding = { version = "2.1", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }

# `derive` feature
oauth1-request-derive-ios = { path = "../oauth1-request-derive-ios", optional = true }

# `either` feature
either = { version = "1.2", optional = true }

# `hmac-sha1` feature
digest = { version = "0.10", optional = true }
hmac = { version = "0.12.1", optional = true }
sha1 = { version = "0.10", optional = true }

# `hmac-sha256` feature
sha2 = { version = "0.10", optional = true }

# `rsa-sha1-06` feature
rsa06 = { version = "0.6", optional = true, package = "rsa" }

# `rsa-sha1-09` feature
rsa09 = { version = "0.9", optional = true, package = "rsa" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# `js` feature
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
base64 = "0.22"
# Trick to make `proc-macro-crate` work in doctests.
oauth1-request-ios = { version = "0.0.1", path = "", default-features = false }
version-sync = "0.9"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[features]
default = ["derive", "hmac-sha1", "std", "hmac-sha256"]
alloc = ["oauth-credentials-ios/alloc"]
derive = ["oauth1-request-derive-ios"]
hmac-sha1 = ["digest", "hmac", "sha1"]
hmac-sha256 = ["hmac", "sha2", "digest"]
rsa-sha1-06 = ["digest", "rsa06", "sha1"]
rsa-sha1-09 = ["digest", "rsa09", "sha1/oid"]
js = ["js-sys"]
serde = ["oauth-credentials-ios/serde"]
# Note: `percent-encoding` depends on `std` until servo/rust-url#691 lands.
# <https://github.com/servo/rust-url/pull/691>
std = ["alloc", "oauth-credentials-ios/std", "rand/std", "rand/std_rng"]
test = []
