[package]
name = "oauth1-request"
version = "0.4.3"
edition = "2018"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["oauth", "oauth1"]
categories = ["authentication"]
homepage = "https://github.com/tesaguri/oauth1-request-rs"
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth1-request/0.4.3/oauth1_request/"
description = """
Yet yet yet another OAuth 1 client library.
"""

[dependencies]
base64 = "0.13"
bitflags = "1"
cfg-if = "1"
oauth-credentials = "0.2"
percent-encoding = "2.1"
rand = "0.7"

# `derive` feature
oauth1-request-derive = { version = "0.4", optional = true }

# `hmac-sha1` feature
either = { version = "1.2", optional = true }
hmac = { version = "0.10", optional = true }
sha-1 = { version = "0.9", optional = true }

[dev-dependencies]
# Trick to make `proc-macro-crate` work in doctests.
oauth1-request = { version = "0.4", path = "", default-features = false }
version-sync = "0.9"

[features]
default = ["derive", "hmac-sha1"]
derive = ["oauth1-request-derive"]
hmac-sha1 = ["hmac", "sha-1"]
serde = ["oauth-credentials/serde"]
