[package]
name = "oauth1-request"
version = "0.5.0"
edition = "2018"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["oauth", "oauth1"]
categories = ["authentication"]
homepage = "https://github.com/tesaguri/oauth1-request-rs"
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth1-request/0.5.0/oauth1_request/"
description = """
Yet yet yet another OAuth 1.0 client library.
"""

[dependencies]
base64 = "0.13"
bitflags = "1"
cfg-if = "1"
oauth-credentials = "0.3"
percent-encoding = "2.1"
rand = "0.8"

# `derive` feature
oauth1-request-derive = { version = "0.4", optional = true }

# `hmac-sha1` feature
either = { version = "1.2", optional = true }
hmac = { version = "0.11", optional = true }
sha-1 = { version = "0.9", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# `js` feature
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
# Trick to make `proc-macro-crate` work in doctests.
oauth1-request = { version = "0.5", path = "", default-features = false }
version-sync = "0.9"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[features]
default = ["derive", "hmac-sha1"]
derive = ["oauth1-request-derive"]
hmac-sha1 = ["hmac", "sha-1"]
js = ["js-sys"]
serde = ["oauth-credentials/serde"]
