[package]
name = "oauth1-request"
version = "0.5.1"
edition = "2018"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["oauth", "oauth1"]
categories = ["authentication"]
homepage = "https://github.com/tesaguri/oauth1-request-rs"
repository = "https://github.com/tesaguri/oauth1-request-rs"
documentation = "https://docs.rs/oauth1-request/0.5.1/oauth1_request/"
description = """
Yet yet yet another OAuth 1.0 client library.
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "pull_9"
required-features = ["std"]

[dependencies]
base64 = { version = "0.13", default-features = false }
cfg-if = "1"
fmt-cmp = "0.1"
oauth-credentials = { version = "0.3", default-features = false }
percent-encoding = { version = "2.1", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }

# `derive` feature
oauth1-request-derive = { version = "0.5", optional = true }

# `either` feature
either = { version = "1.2", optional = true }

# `hmac-sha1` feature
digest = { version = "0.10", optional = true }
hmac = { version = "0.12.1", optional = true }
sha-1 = { version = "0.10", optional = true }

# `rsa-sha1` feature
rsa = { version = "0.6", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# `js` feature
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
base64 = "0.13"
# Trick to make `proc-macro-crate` work in doctests.
oauth1-request = { version = "0.5", path = "", default-features = false }
version-sync = "0.9"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[features]
default = ["derive", "hmac-sha1", "std"]
alloc = ["oauth-credentials/alloc"]
derive = ["oauth1-request-derive"]
hmac-sha1 = ["digest", "hmac", "sha-1"]
rsa-sha1 = ["digest", "rsa", "sha-1"]
js = ["js-sys"]
serde = ["oauth-credentials/serde"]
# Note: `percent-encoding` depends on `std` until servo/rust-url#691 lands.
# <https://github.com/servo/rust-url/pull/691>
std = ["alloc", "oauth-credentials/std", "rand/std", "rand/std_rng"]
test = []
