[package]
name = "test-deps"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
publish = false

[workspace]

[dependencies]
oauth1-request = { version = "0.3", default-features = false, features = ["derive"] }

[patch.crates-io]
oauth1-request = { path = "../../oauth1-request" }
oauth1-request-derive = { path = "../../oauth1-request-derive" }
